_sass/_main.scss
// https://coolors.co/fffbeb-ffe270-ffda47-ffcc00-2b2f31
$color-background: #2b2f31;
$color-background-rgb: 43, 47, 49;
$color-primary: #fffbeb;
$color-primary-rgb: 255, 251, 235;
$color-secondary: #ffda47;
$color-secondary-rgb: 255, 218, 71;
$color-tertiary: #ffe270;
$color-tertiary-rgb: (255, 226, 112);
$color-action: #ffcc00;
$color-action-rgb: 255, 204, 0;
$color-text: RGBA($color-primary-rgb, .95);
$color-text-sunken: RGBA($color-primary-rgb, .7);
$padding-nav-links: 32px;
$container-width: 1144px;
$screen-large: 1000px;
$screen-medium: 700px;
$screen-small: 400px;

::selection {
  background: RGBA($color-tertiary-rgb, 0.3);
}

html, body {
  height: 100%;
  margin: 0;
}

html {
  background-color: $color-background;
  font-size: 16px;
}

body {
  font-family: "DM Sans", sans-serif;
  font-size: 1.125em;
  color: $color-text;
  display: flex;
  flex-direction: column;
}

.content {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 32px;
  a {
    color: $color-action;
    text-decoration: none;
    border-bottom: 1px dashed transparent;
    padding-bottom: 0.02em;
    transition: border-bottom-color .2s ease-in-out;

    &:hover {
      border-bottom-color: $color-action;
    }
  }
}

footer {
  flex-shrink: 0;
  margin-top: 32px;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  // background-color: #ffcc00;
}

.projects-intro {
  margin: 48px 0 96px 0;
  width: 100%;
  max-width: 600px;

  .projects-intro-header {
    font-family: "DM Serif Display", serif;
    font-weight: 400;
    color: $color-primary;
    font-size: 3.5rem;
    text-align: center;
  }

  .projects-intro-links {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    a {
      font-size: 2rem;
      opacity: .85;
      border: none;
      &:hover {
        opacity: 1;
        border: none;
      }
    }
    .projects-intro-links-social-media {
      display: flex;
      flex-direction: row;
      gap: 40px;
      margin: 0;
      li {
        display: inline;
        list-style: none;
        float: left;
        margin: 0;
      }
    }
  }
}

@media (max-width: $screen-medium) {
  .projects-intro {
    .projects-intro-header {
      font-size: 2.75rem;
    }
  }
}

@media (max-width: $screen-small) {
  .projects-intro {
    .projects-intro-header {
      font-size: 2.25rem;
    }
  }
}

.projects-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  p {
    margin: 0 0 12px 0;
  }
  i {
    font-size: 2rem;
  }
  a.projects-scroll-down {
    opacity: .85;
    border: none;
    text-align: center;

    &:hover {
      opacity: 1;
      border: none;
    }
  }
}

.container {
  width: 90%;
  max-width: $container-width;
}

// @media (min-width: 1024px) {

// }

// @media (min-width: 768px) {
  
// }

// @media (min-width: 320px) {
  
// }

